<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Fill_order" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="90dp"
        android:text="@string/fillorder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Olive" />

    <TextView
        android:id="@+id/ps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginBottom="5dp"
        android:text="@string/psize"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Peru" />

    <RadioGroup
        android:id="@+id/rG1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignLeft="@+id/ps"
        android:layout_below="@+id/ps" >
    <RadioButton
        android:id="@+id/rbsmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/small"
        android:textColor="@color/textColor" />

    <RadioButton
        android:id="@+id/rbmedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"    
        android:text="@string/medium"
        android:textColor="@color/textColor" />

    <RadioButton
        android:id="@+id/rblarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/large"
        android:textColor="@color/textColor" />
     </RadioGroup>

    <CheckBox
        android:id="@+id/cbSs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:text="@string/supreme"
        android:textColor="@color/textColor" />

    <CheckBox
        android:id="@+id/cbP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cbSs"
        android:text="@string/pepperoni"
        android:textColor="@color/textColor" />

    <CheckBox
        android:id="@+id/cbV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cbP"
        android:text="@string/vegetarian"
        android:textColor="@color/textColor" />

    <CheckBox
        android:id="@+id/cbCf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cbV"
        android:text="@string/fajita"
        android:textColor="@color/textColor" />

    <CheckBox
        android:id="@+id/cbCb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cbCf"
        android:text="@string/bbq"
        android:textColor="@color/textColor" />

    <Button
        android:id="@+id/btnToOpt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/ps"
        android:text="@string/options" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/cbCb"
        android:layout_below="@+id/rG1"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="14dp"
        android:text="@string/ptop"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Peru" />

</RelativeLayout>