<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Options" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="120dp"
        android:layout_marginLeft="100dp"
        android:text="@string/opt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Olive" />

    <Button
        android:id="@+id/btnSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnDisplay"
        android:layout_alignRight="@+id/textView1"
        android:text="@string/sub" />

    <Button
        android:id="@+id/btnConf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSub"
        android:layout_alignLeft="@+id/btnSub"
        android:text="@string/confirm" />

    <Button
        android:id="@+id/btnDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/btnSub"
        android:layout_below="@+id/textView1"
        android:text="@string/display" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnDisplay"
        android:layout_marginTop="44dp"
        android:text="@string/results"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Peru" />

</RelativeLayout>
